--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -42,7 +42,7 @@
 
             <!-- Master Data -->
             <li class="has-submenu {% if '/master-data/' in request.path %}expanded{% endif %}">
-                <a href="#">
+                <a href="javascript:void(0)">
                     <i class="fas fa-database icon"></i>
                     <span>Master Data</span>
                     <i class="fas fa-chevron-right toggle-icon"></i>
@@ -60,7 +60,7 @@
 
         <!-- Reports -->
         <li class="has-submenu {% if '/reports/' in request.path %}expanded{% endif %}">
-            <a href="#">
+            <a href="javascript:void(0)">
                 <i class="fas fa-chart-pie icon"></i>
                 <span>Reports</span>
                 <i class="fas fa-chevron-right toggle-icon"></i>
