--- a/core/templates/accounts/profile_content.html
+++ b/core/templates/accounts/profile_content.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ user.get_full_name|default:user.username }}'s Profile</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/profile_content.css' %}" />
     <link
         rel="stylesheet"
