--- a/core/templates/accounts/admin_dashboard.html
+++ b/core/templates/accounts/admin_dashboard.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Admin Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% load static %}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
