--- a/core/templates/accounts/password_reset_done.html
+++ b/core/templates/accounts/password_reset_done.html
@@ -1,8 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Reset Link Sent</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/password_flow.css' %}">
