--- a/core/templates/accounts/settings.html
+++ b/core/templates/accounts/settings.html
@@ -1,9 +1,11 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Account Settings</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'icons/favicon.ico' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
