--- a/staticfiles/css/login.css
+++ b/staticfiles/css/login.css
@@ -47,7 +47,7 @@ body {
   left: 50%;
   width: 200px;
   height: 200px;
-  background: radial-gradient(circle, #34d399 0%, #059669 100%);
+  background: radial-gradient(circle, #123692 0%, #172d69 100%);
   transform: translate(-50%, -50%);
   opacity: 0.15;
 }
