--- a/core/templates/core/helpdesk/ticketing_dashboard.html
+++ b/core/templates/core/helpdesk/ticketing_dashboard.html
@@ -5,6 +5,7 @@
 
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/ticketing_dashboard.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ticketing_dashboard_modal.css' %}">
 {% endblock %}
 
 {% block content %}
